chandeliers-lus/tests/compile_fail/ui/tc/poly/unused.stderr
error: Type variable T cannot be inferred from the inputs of this node
 --> tests/compile_fail/ui/tc/poly/unused.rs:4:15
  |
4 |     #[generic[T]]
  |               ^
  |
note: None of these arguments are of type T
 --> tests/compile_fail/ui/tc/poly/unused.rs:5:13
  |
5 |     node id(t0: int) returns (t1: int);
  |             ^^^^^^^^
